--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@
     /* Others */
     --items: 3;
     --indent: 24px;
+    --transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -845,6 +846,90 @@ display: flex;
 
     padding-left: 0;
     padding-right: auto;
+}
+
+/**
+  |============================
+  | Footer form
+  |============================
+*/
+.footer-form-container {
+    display: block;
+    margin-left: 80px;
+}
+
+.footer-subscribe-desc {
+    color: var(--primary-white-color);
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    margin-bottom: 16px;
+}
+
+.footer-form {
+    display: flex;
+    gap: 24px;
+}
+
+.footer-form-label {}
+
+.footer-form-input {
+    width: 264px;
+    height: 40px;
+    border-radius: 4px;
+    border: 1px solid var(--primary-white-color);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    background-color: transparent;
+    outline: transparent;
+    /* padding: 8px 16px; */
+    padding-left: 16px;
+    color: var(--primary-white-color);
+    font-size: 12px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    transition: var(--transition);
+}
+
+.footer-form-input:focus,
+.footer-form-input:hover {
+    border-color: var(--iris);
+}
+
+.footer-form-input::placeholder {
+    color: var(--primary-white-color);
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+}
+
+.footer-btn {
+    display: inline-flex;
+    padding: 8px 24px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px;
+    background: var(--iris);
+    border: none;
+    color: var(--primary-white-color);
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    /* margin-left: 24px; */
+    min-width: 165px;
+    min-height: 40px;
+    transition: background-color var(--transition);
+}
+
+.footer-btn-icon {
+    fill: currentColor;
+    margin-left: 16px;
+}
+
+.footer-btn:hover,
+.footer-btn:focus {
+    background-color: var(--ocean);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 
 /**
