--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,9 @@
     --cloud: #F4F4FD;
     --ocean: #404BBF;
     --light-slate: #8E8F99;
+    --dairy: #FCFCFC;
+    --error: #e74a3b;
+    --success: #2cd882;
 
     /* Background colors */
     --primary-white-color: #ffffff;
@@ -937,7 +940,10 @@ display: flex;
 | < !-- Modal window -->
 |============================
 */
-.backdrop {
+
+
+
+/**.backdrop {
     position: fixed;
     top: 0;
     left: 0;
@@ -947,13 +953,13 @@ display: flex;
 
 
     background-color: rgba(46, 47, 66, 0.4);
-    /*backdrop-filter: blur(1px);*/
 
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 
 }
-
+**/
+/**
 .backdrop.is-hidden {
     opacity: 0;
     pointer-events: none;
@@ -1039,8 +1045,293 @@ display: flex;
     fill: #ffffff
 }
 
-/**
-|============================
-| Portpholio but styles 
-|============================
-*/
+**/
+
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+
+    background-color: rgba(46, 47, 66, 0.40);
+
+    transition: opacity var(--transition), visibility var(--transition);
+}
+
+.backdrop.is-hidden {
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
+}
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    opacity: 1;
+    transition: transform var(--transition);
+    width: 408px;
+    min-height: 584px;
+    padding: 72px 24px 24px 24px;
+    border-radius: 4px;
+    background: var(--dairy);
+    box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+}
+
+.backdrop.is-hidden .modal {
+    transform: translateX(-50%) translateY(-70%);
+    opacity: 0;
+}
+
+.modal-btn {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    fill: var(--navyblue);
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    background-color: var(--cornflower);
+    width: 24px;
+    height: 24px;
+    padding: 0;
+    transition: background-color var(--transition), border var(--transition);
+}
+
+.modal-btn:hover,
+.modal-btn:focus {
+    background-color: var(--ocean);
+    border: none;
+    fill: var(--primary-white-color);
+}
+
+.modal-icon-btn {
+    transition: fill var(--transition);
+}
+
+.modal-caption {
+    display: block;
+    width: 360px;
+    text-align: center;
+    color: var(--navyblue);
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    margin-bottom: 16px;
+}
+
+/* Modal form */
+.modal-form-container {
+    margin-bottom: 8px;
+}
+
+.modal-form {}
+
+.modal-form-label {
+    display: block;
+    margin-bottom: 4px;
+    color: var(--slate);
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+}
+
+.modal-form-field {
+    position: relative;
+    /* margin-bottom: 8px; */
+}
+
+.modal-form-input {
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    background-color: transparent;
+    padding-left: 38px;
+    /* padding: 11px 16px; */
+    outline: transparent;
+
+    transition: border-color var(--transition);
+}
+
+.modal-form-input:focus {
+    border-color: #4D5AE5;
+}
+
+.modal-form-input:focus+.modal-form-icon {
+    fill: #4D5AE5;
+}
+
+.form-comment-container {
+    margin-bottom: 16px;
+}
+
+.modal-form-comment {
+    /* margin-bottom: 16px; */
+    width: 100%;
+    border-radius: 4px;
+    padding: 11px 16px;
+    outline: transparent;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    height: 40px;
+    background-color: transparent;
+
+    transition: border-color var(--transition);
+    height: 120px;
+    padding: 8px 16px;
+    color: rgba(46, 47, 66, 0.4);
+    border-color: rgba(46, 47, 66, 0.4);
+    resize: none;
+    transition: border-color var(--transition);
+}
+
+.modal-form-comment::placeholder {
+    color: rgba(46, 47, 66, 0.4);
+}
+
+.modal-form-comment:focus {
+    border-color: var(--iris);
+}
+
+/* Check input state */
+/* .modal-form-input:not(:placeholder-shown):invalid:required {
+    border-color: var(--error);
+}
+
+.modal-form-input:not(:placeholder-shown):valid:required {
+    border-color: var(--success);
+} */
+
+.modal-form-icon {
+    position: absolute;
+    left: 16px;
+    top: 50%;
+    fill: var(--navyblue);
+    transform: translateY(-50%);
+    pointer-events: none;
+    transition: fill var(--transition);
+}
+
+/* 
+.modal-form-input:not(:placeholder-shown):invalid:required+.modal-form-icon {
+    fill: var(--error);
+}
+
+.modal-form-input:not(:placeholder-shown):valid:required+.modal-form-icon {
+    fill: var(--success);
+} */
+
+.modal-form-info {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translateX(-16px) translateY(-50%);
+}
+
+/* .error,
+.success {
+    transform-origin: center;
+    transform: scale(0.2);
+    opacity: 0;
+    transition: opacity 400ms cubic-bezier(0.68, -0.55, 0.27, 1.55), transform 400ms cubic-bezier(0.68, -0.55, 0.27, 1.55);
+}
+
+.modal-form-input:not(:placeholder-shown):invalid:required~.modal-form-info .error {
+    opacity: 1;
+    transform: scale(1);
+}
+
+.modal-form-input:not(:placeholder-shown):valid:required~.modal-form-info .success {
+    opacity: 1;
+    transform: scale(1);
+} */
+
+.form-agrement-container {
+    margin-bottom: 24px;
+}
+
+.modal-form-agrement {
+    display: block;
+    color: var(--slate);
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+}
+
+.agreement-checkbox {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 16px;
+    height: 16px;
+    margin-right: 8px;
+
+    fill: transparent;
+
+    border-radius: 2px;
+    border: 1px solid var(--navyblue, rgba(46, 47, 66, 0.40));
+
+    transition: background-color var(--transition), border var(--transition), fill var(--transition);
+}
+
+/* input[type="checkbox"]:checked + .agreement-checkbox {
+    background-color: var(--ocean);
+    border: var(--ocean);
+    fill: var(--cloud);
+} */
+input:checked+label>span {
+    background-color: var(--ocean);
+    border: none;
+    fill: var(--cloud);
+}
+
+/* input[type="checkbox"]:focus+.agreement-checkbox {
+    border-color: var(--ocean);
+} */
+
+input:hover+label>span {
+    border-color: var(--ocean);
+}
+
+.modal-form-desc {
+    user-select: none;
+}
+
+.modal-form-link {
+    color: var(--iris);
+}
+
+.modal-form-btn {
+    display: block;
+    margin: 0 auto;
+    /* margin-top: 24px; */
+    border-radius: 4px;
+    background: var(--iris);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    border: none;
+    color: var(--primary-white-color);
+    text-align: center;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    padding: 16px 32px;
+    min-width: 169px;
+    height: 56px;
+
+    transition: background-color var(--transition);
+}
+
+.modal-form-btn:hover,
+.modal-form-btn:focus {
+    background-color: var(--ocean);
+
+}
