--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@
     /* Fonts */
     --secondary-font: "Raleway", sans-serif;
     /* Colors */
+    --navyblue-modal: rgba(46, 47, 66, 0.4);
     --primary-black-color: #212121;
     --iris: #4d5ae5;
     --slate: #434455;
@@ -1052,14 +1053,60 @@ display: flex;
     position: fixed;
     top: 0;
     left: 0;
-
     width: 100%;
     height: 100%;
-
-    background-color: rgba(46, 47, 66, 0.40);
-
-    transition: opacity var(--transition), visibility var(--transition);
+    background-color: var(--navyblue-modal);
+    z-index: 2;
+    transition: opacity var(--transition),
+        visibility var(--transition);
 }
+
+.backdrop .modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 408px;
+    min-height: 584px;
+    padding: 72px 24px 24px;
+    border-radius: 4px;
+    background-color: var(--dairy);
+    box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
+        0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+    transition: transform var(--transition);
+}
+
+.backdrop .modal-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    right: 24px;
+    top: 24px;
+    width: 24px;
+    height: 24px;
+    fill: var(--cornflower);
+    border: 1px solid var(--cornflower);
+    border-radius: 50%;
+    border-color: rgba(0, 0, 0, 0.1);
+    background-color: var(--cornflower);
+    padding: 0x;
+    transition: background-color var(--transition),
+        border var(--transition), fill var(--transition);
+}
+
+.backdrop .modal-btn:hover,
+.backdrop .modal-btn:focus {
+    background-color: var(--ocean);
+    border: none;
+}
+/**
+@media only screen and (max-width: 427.98px) {
+    .backdrop .modal {
+        width: 310px;
+    }
+}
+**/
 
 .backdrop.is-hidden {
     opacity: 0;
@@ -1067,272 +1114,159 @@ display: flex;
     visibility: hidden;
 }
 
-.modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translateX(-50%) translateY(-50%);
-    opacity: 1;
-    transition: transform var(--transition);
-    width: 408px;
-    min-height: 584px;
-    padding: 72px 24px 24px 24px;
-    border-radius: 4px;
-    background: var(--dairy);
-    box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
-}
-
-.backdrop.is-hidden .modal {
-    transform: translateX(-50%) translateY(-70%);
-    opacity: 0;
-}
-
-.modal-btn {
-    position: absolute;
-    top: 24px;
-    right: 24px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    fill: var(--navyblue);
-    border-radius: 50%;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    background-color: var(--cornflower);
-    width: 24px;
-    height: 24px;
-    padding: 0;
-    transition: background-color var(--transition), border var(--transition);
-}
-
-.modal-btn:hover,
-.modal-btn:focus {
-    background-color: var(--ocean);
-    border: none;
-    fill: var(--primary-white-color);
-}
-
-.modal-icon-btn {
+.backdrop .modal-btn-ico {
+    fill: black;
     transition: fill var(--transition);
 }
 
-.modal-caption {
+.backdrop .modal-btn:hover .modal-btn-ico,
+.backdrop .modal-btn:focus .modal-btn-ico {
+    fill: var(--primary-white-color);
+}
+
+.modal .strong {
     display: block;
-    width: 360px;
-    text-align: center;
+    width: 100%;
     color: var(--navyblue);
+    text-align: center;
     font-weight: 500;
     line-height: 1.5;
+    /* 150% */
     letter-spacing: 0.02em;
     margin-bottom: 16px;
 }
 
-/* Modal form */
-.modal-form-container {
+.input-box {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
     margin-bottom: 8px;
 }
 
-.modal-form {}
-
-.modal-form-label {
-    display: block;
-    margin-bottom: 4px;
-    color: var(--light-slate);
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.04em;
-}
-
-.modal-form-field {
-    position: relative;
-    /* margin-bottom: 8px; */
-}
-
-.modal-form-input {
-    width: 100%;
-    height: 40px;
-    border: 1px solid rgba(46, 47, 66, 0.4);
-    border-radius: 4px;
-    background-color: transparent;
-    padding-left: 38px;
-    /* padding: 11px 16px; */
-    outline: transparent;
-
-    transition: border-color var(--transition);
-}
-
-.modal-form-input:focus {
-    border-color: var(--iris);
-}
-
-.modal-form-input:focus+.modal-form-icon {
-    fill:var(--iris);
-}
-
-.form-comment-container {
+.last-input-box {
     margin-bottom: 16px;
 }
 
-.modal-form-comment {
-    /* margin-bottom: 16px; */
+.input-label {
+    display: block;
+    color: var(--lightslate, #8e8f99);
+    margin-bottom: 4px;
+}
+
+.input-field {
+    position: relative;
+    font-size: 18px;
+}
+
+.modal-input {
     width: 100%;
-    border-radius: 4px;
-    padding: 11px 16px;
-    outline: transparent;
-    font-size: 12px;
-    line-height: 1.17;
-    letter-spacing: 0.04em;
     height: 40px;
+    padding: 11px 11px 11px 38px;
+    border-radius: 4px;
+    border: 1px solid var(--navyblue-modal);
     background-color: transparent;
-
     transition: border-color var(--transition);
-    height: 120px;
-    padding: 8px 16px;
-    color: rgba(46, 47, 66, 0.4);
-    border-color: rgba(46, 47, 66, 0.4);
-    resize: none;
-    transition: border-color var(--transition);
+    outline: transparent;
 }
 
-.modal-form-comment::placeholder {
-    color: rgba(46, 47, 66, 0.4);
-}
-
-.modal-form-comment:focus {
+.modal-input:focus,
+.text-area:focus {
     border-color: var(--iris);
 }
 
-/* Check input state */
-/* .modal-form-input:not(:placeholder-shown):invalid:required {
-    border-color: var(--error);
-}
-
-.modal-form-input:not(:placeholder-shown):valid:required {
-    border-color: var(--success);
-} */
-
-.modal-form-icon {
+.modal-icon {
     position: absolute;
-    left: 16px;
     top: 50%;
-    fill: var(--navyblue);
     transform: translateY(-50%);
-    pointer-events: none;
+    left: 16px;
+    fill: var(--navyblue);
     transition: fill var(--transition);
 }
 
-/* 
-.modal-form-input:not(:placeholder-shown):invalid:required+.modal-form-icon {
-    fill: var(--error);
+.modal-input:focus+.modal-icon {
+    fill: var(--iris);
 }
 
-.modal-form-input:not(:placeholder-shown):valid:required+.modal-form-icon {
-    fill: var(--success);
-} */
-
-.modal-form-info {
-    position: absolute;
-    top: 50%;
-    right: 0;
-    transform: translateX(-16px) translateY(-50%);
+.text-area {
+    width: 100%;
+    height: 120px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+    background-color: transparent;
+    outline: transparent;
+    resize: none;
+    padding: 8px 16px;
+    border-radius: 4px;
+    border: 1px solid var(--navyblue-modal);
+    transition: border-color var(--transition);
 }
 
-/* .error,
-.success {
-    transform-origin: center;
-    transform: scale(0.2);
-    opacity: 0;
-    transition: opacity 400ms cubic-bezier(0.68, -0.55, 0.27, 1.55), transform 400ms cubic-bezier(0.68, -0.55, 0.27, 1.55);
+.text-area::placeholder {
+    color: var(--navyblue-modal);
+    font-size: 12px;
 }
 
-.modal-form-input:not(:placeholder-shown):invalid:required~.modal-form-info .error {
-    opacity: 1;
-    transform: scale(1);
-}
-
-.modal-form-input:not(:placeholder-shown):valid:required~.modal-form-info .success {
-    opacity: 1;
-    transform: scale(1);
-} */
-
-.form-agrement-container {
+.policy-box {
     margin-bottom: 24px;
 }
 
-.modal-form-agrement {
+.modal-privacy-check:checked+.policy .modal-checkbox {
+    background-color: var(--ocean);
+    border: none;
+    fill: var(--cloud);
+}
+
+.policy {
     display: block;
-    color: var(--light-slate);
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: var(--lightslate);
+}
+
+.policy-text {
+    color: var(--lightslate, #8e8f99);
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.04em;
 }
 
-.agreement-checkbox {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
+.policy-text-link {
+    color: var(--iris);
+    text-decoration-line: underline;
+}
 
+.modal-checkbox {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
     width: 16px;
     height: 16px;
-    margin-right: 8px;
-
+    border: 1px solid var(--navyblue-modal);
     fill: transparent;
-
     border-radius: 2px;
-    border: 1px solid var(--navyblue, rgba(46, 47, 66, 0.40));
-
-    transition: background-color var(--transition), border var(--transition), fill var(--transition);
+    margin-right: 8px;
+    transition: background-color var(--transition),
+        border var(--transition), fill var(--transition);
 }
 
-/* input[type="checkbox"]:checked + .agreement-checkbox {
-    background-color: var(--ocean);
-    border: var(--ocean);
-    fill: var(--cloud);
-} */
-input:checked+label>span {
-    background-color: var(--ocean);
-    border: none;
-    fill: var(--cloud);
-}
-
-/* input[type="checkbox"]:focus+.agreement-checkbox {
-    border-color: var(--ocean);
-} */
-
-input:hover+label>span {
-    border-color: var(--ocean);
-}
-
-.modal-form-desc {
-    user-select: none;
-}
-
-.modal-form-link {
-    color: var(--iris);
-}
-
-.modal-form-btn {
-    display: block;
-    margin: 0 auto;
-    /* margin-top: 24px; */
-    border-radius: 4px;
-    background: var(--iris);
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-    border: none;
-    color: var(--primary-white-color);
-    text-align: center;
-    font-size: 16px;
+.modal-submit-btn {
+    min-width: 169px;
+    background-color: #4d5ae5;
+    color: #ffffff;
     font-weight: 500;
     line-height: 1.5;
+    /* 150% */
     letter-spacing: 0.04em;
     padding: 16px 32px;
-    min-width: 169px;
-    height: 56px;
-
-    transition: background-color var(--transition);
+    margin: 0 auto;
+    border-radius: 4px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    transition: background-color var(--transition-settings);
 }
 
-.modal-form-btn:hover,
-.modal-form-btn:focus {
+.modal-submit-btn:hover,
+.modal-submit-btn:focus {
     background-color: var(--ocean);
-
 }
