--- a/css/styles.css
+++ b/css/styles.css
@@ -1095,11 +1095,35 @@ display: flex;
         border var(--transition), fill var(--transition);
 }
 
-.backdrop .modal-btn:hover,
+.modal-btn {
+    height: 24px;
+    border-radius: 50%;
+    padding: 0;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-btn:hover {
+background-color: #404bb;
+border: none;
+}
+.modal-btn:focus {
+    background-color: #404bb;
+    border: none;
+}
+
+
+/**.backdrop .modal-btn:hover,
 .backdrop .modal-btn:focus {
     background-color: var(--ocean);
     border: none;
 }
+**/
+.backdrop .modal-btn:hover,
+.backdrop .modal-btn:focus {
+    fill: #ffffff
+}
+    
+
 /**
 @media only screen and (max-width: 427.98px) {
     .backdrop .modal {
