--- a/css/styles.css
+++ b/css/styles.css
@@ -1093,6 +1093,7 @@ display: flex;
     padding: 0x;
     transition: background-color var(--transition),
         border var(--transition), fill var(--transition);
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-btn {
